--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <%= partial 'layouts/_html_head', locals: {
-      title: current_page.data.title || 'macapinlac.com',
-      description: current_page.data.description || 'Personal blog and portfolio of Ritchie Macapinlac - thoughts on technology, life, and everything in between'
+      title: content_for?(:page_title) ? yield_content(:page_title) : (current_page.data.title || 'macapinlac.com'),
+      description: content_for?(:page_description) ? yield_content(:page_description) : (current_page.data.description || 'Personal blog and portfolio of Ritchie Macapinlac - thoughts on technology, life, and everything in between')
     } %>
   </head>
   <body>
