--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Contact - Macapinlac.com
+title: Contact - macapinlac.com
 description: Get in touch with me. I'm always interested in hearing from fellow developers, writers, and curious minds.
 keywords: contact, get in touch, email, social media
 layout: sidebar_layout
