--- a/source/calendar.html.erb
+++ b/source/calendar.html.erb
@@ -1,5 +1,21 @@
 ---
 pageable: true
+title: Archive for <%= case page_type
+     when 'day' %>
+    <%= Date.new(year, month, day).strftime('%B %e, %Y') %>
+  <% when 'month' %>
+    <%= Date.new(year, month, 1).strftime('%B %Y') %>
+  <% when 'year' %>
+    <%= year %>
+  <% end %> - macapinlac.com
+description: Browse all articles from <%= case page_type
+     when 'day' %>
+    <%= Date.new(year, month, day).strftime('%B %e, %Y') %>
+  <% when 'month' %>
+    <%= Date.new(year, month, 1).strftime('%B %Y') %>
+  <% when 'year' %>
+    <%= year %>
+  <% end %> on macapinlac.com
 ---
 <h2>Archive for
   <% case page_type
