--- a/source/writing/index.html.erb
+++ b/source/writing/index.html.erb
@@ -1,5 +1,5 @@
 ---
-title: "All Posts - Ritchie Macapinlac"
+title: "Writing - macapinlac.com"
 description: "Browse all blog posts by Ritchie Macapinlac. Articles about technology, parenting, productivity, and personal development."
 pageable: true
 per_page: 12
@@ -7,10 +7,7 @@ layout: writing_layout
 ---
 
 <header class="page-header">
-  <h1 class="page-title">All Posts</h1>
-  <p class="page-description">
-    Thoughtful reflections on technology, parenting, productivity, and personal development.
-  </p>
+  <h1 class="page-title">Writing</h1>
 </header>
 
 <div class="page-content">
