--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -147,6 +147,9 @@ pre {
   padding: $space-md;
   border-radius: 4px;
   overflow-x: auto;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  white-space: pre-wrap;
   font-family: $font-mono;
   font-size: 0.9rem;
   line-height: 1.5;
